--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <div>
-        <a href="./recipes/greekSalad.html">Greek Salad</a>
-        <a href="./recipes/greekSalad.html">Chicken Parmesan</a>
-        <a href="./recipes/greekSalad.html">Chicken</a>
-        </div>
+        
+        <ul>
+            <li><a href="./recipes/chickenParmesan.html">Chicken Parmesan</a></li>
+            <li><a href="./recipes/greekSalad.html">Greek Salad</a></li>
+            <li><a href="./recipes/pepperoniPizza.html">Pepperoni Pizza</a></li>
+        </ul>
+        
     </body>
 </html>
