--- a/recipes/chickenParmesan.html
+++ b/recipes/chickenParmesan.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./../css/style.css">
     <title>Chicken Parmesan</title>
 </head>
 <body>
     <h1>Chicken Parmesan</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F827520.jpg" alt="plate of greek salad">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9411518.jpg&q=85">
         
         <div>
         <h3>Description:</h3>
@@ -18,6 +19,7 @@
         </div>
         <br>
         <h3>Ingredients (adjusted to 4 servings)</h3>
+        <!--&lt in the <u> tag is used to create less than equal-->
         <ul>
             <li>4 skinless, boneless </li>
             <li>Salt and freshly ground black pepper (to taste)</li>
@@ -44,8 +46,9 @@
             <li>Heat 1 cup olive oil in a large skillet on medium-high heat until it begins to shimmer. Cook chicken until golden, about 2 minutes on each side. The chicken will finish cooking in the oven.</li>
             <li>Place chicken in a baking dish and top each breast with about 1/3 cup of tomato sauce. Layer each chicken breast with equal amounts of mozzarella cheese, fresh basil, and provolone cheese. Sprinkle 1 to 2 tablespoons of Parmesan cheese on top and drizzle with 1 tablespoon olive oil.</li>
             <li>Bake in the preheated oven until cheese is browned and bubbly, and chicken breasts are no longer pink in the center, 15 to 20 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F (74 degrees C).</li>
-            
+            <li>Serve</li>
         </ol>
 
+        <p>Source: https://www.allrecipes.com/recipe/223042/chicken-parmesan/</p>
 </body>
 </html>
