--- a/recipes/greekSalad.html
+++ b/recipes/greekSalad.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Greek Salad</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./../css/style.css">
+        <title>Greek Salad</title>
     </head>
     <body>
         
