--- a/recipes/chickenParmesan.html
+++ b/recipes/chickenParmesan.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Chicken Parmesan</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9411518.jpg&q=85">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9411518.jpg&q=85" alt="Bowl of Chicken Parmesan">
         
         <div>
         <h3>Description:</h3>
@@ -24,9 +24,9 @@
             <li>4 skinless, boneless </li>
             <li>Salt and freshly ground black pepper (to taste)</li>
             <li>2 eggs</li>
-            <li>1<u>&lt</u> cup (or more) panko bread crumbs</li>
+            <li>1<u>&lt;</u> cup (or more) panko bread crumbs</li>
             <li>1/2 cup grated Parmesan cheese</li>
-            <li>2<u>&lt</u> tablespoons all-purpose flour</li>
+            <li>2<u>&lt;</u> tablespoons all-purpose flour</li>
             <li>1/2 cup prepared tomato sauce</li>
             <li>1/4 cup fresh mozzarella, cut into cubes</li>
             <li>1/4 cup chopped fresh basil</li>
