--- a/recipes/pepperoniPizza.html
+++ b/recipes/pepperoniPizza.html
@@ -12,7 +12,7 @@
 <body>
     <!--Header-->
     <h1>Pepperoni Pizza</h1>
-        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5300487.jpg&w=279&h=279&c=sc&poi=face&q=85" alt="plate of greek salad">
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F5300487.jpg&w=279&h=279&c=sc&poi=face&q=85" alt="Pepperoni Pizza">
         
         <h3>Description:</h3>
         <p>This recipe will show you how to make pepperoni pizza from scratch.</p>
@@ -42,7 +42,7 @@
         <h4>Pizza crust ingredients</h4>
         <ul>
             <li>1 6 ounce pepperoni</li>
-            <li>1<u>&lt</u> cup shredded mozzarella cheese</li>
+            <li>1<u>&lt;</u> cup shredded mozzarella cheese</li>
         </ul>
         <br>
         <h3>Directions</h3>
