--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
     <head>
         <title>Home</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        
-        <ul>
-            <li><a href="./recipes/chickenParmesan.html">Chicken Parmesan</a></li>
-            <li><a href="./recipes/greekSalad.html">Greek Salad</a></li>
-            <li><a href="./recipes/pepperoniPizza.html">Pepperoni Pizza</a></li>
-        </ul>
-        
+        <h1 class="recipeHeader">Odin Recipes</h1>
+        <div class="linkBG">
+            <ul>
+                <li><a href="./recipes/chickenParmesan.html">Chicken Parmesan</a></li>
+                <li><a href="./recipes/greekSalad.html">Greek Salad</a></li>
+                <li><a href="./recipes/pepperoniPizza.html">Pepperoni Pizza</a></li>
+            </ul>
+        </div>
     </body>
 </html>
